apps/jcu-site/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: jcu-site
spec:
  hostnames:
    - jcu.abutt.dev
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: cloudflare-tunnel
      namespace: default
      sectionName: http
  rules:
    - backendRefs:
        - kind: Service
          name: jcu-site
          port: 80
      matches:
        - path:
            type: PathPrefix
            value: /
